--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -5,4 +5,19 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     margin: 20px 0;
     text-align: justify;
+    font-family: 'Lato', sans-serif;
+}
+
+.Dictionary input {
+    width: 100%;
+    padding: 5px 15px;
+    font-size: larger;
+    border: 1px solid rgb(234, 170, 87);
+    border-radius: 7px;
+}
+
+.Dictionary .hint {
+    font-size: smaller;
+    margin-top: 10px;
+    color: grey;
 }
