new css files for each sections

--- a/src/Phonetic.css
+++ b/src/Phonetic.css
@@ -9,7 +9,7 @@
     text-decoration: none;
     transition: all 200ms ease-in-out;
     font-size: 12px;
-    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .Phonetic a:hover {
