--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -8,11 +8,17 @@
     font-family: 'Lato', sans-serif;
 }
 
+.Dictionary .searchEngine {
+    height: 300px;
+    background: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+    border: 1px solid rgba(22, 136, 232, 0.6);
+}
+
 .Dictionary input {
     width: 100%;
     padding: 5px 15px;
     font-size: larger;
-    border: 1px solid rgb(234, 170, 87);
+    border: 1px solid rgba(22, 136, 232, 0.9);
     border-radius: 7px;
 }
 
